# CL4SE

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ime-focus-probe.txt  ime-probe.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility_report.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html
docs/downloads/: cl4se-windows-installer.cmd  clime-windows-installer.cmd
src/: config.rs  control.rs  lib.rs  main.rs  update.rs
src/core/: mod.rs  tracker.rs
src/platform/: mod.rs
src/platform/linux/: autostart.rs  diagnostics.rs  ime.rs  injector.rs  interceptor.rs  mod.rs  signal.rs  xkb.rs
src/platform/macos/: autostart.rs  diagnostics.rs  event_tap.rs  hidutil.rs  ime.rs  injector.rs  mod.rs  modifier_lock.rs  signal.rs
src/platform/windows/: autostart.rs  hooks.rs  ime.rs  injector.rs  mod.rs  taskbar.rs
tests/: cli.rs  core_scenarios.rs
