[package]
name = "clime"
version = "0.1.0"
edition = "2021"
description = "Assign IME commit to the physical Caps Lock key"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "6"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.9"

