[package]
name = "cl4se"
version = "1.0.0"
edition = "2021"
description = "Caps Lock for Safe Enter: assign IME commit and optional Shift+Enter to Caps Lock"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "6"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.9"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.25"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"
zbus = { version = "5", features = ["blocking-api"] }
